# machine-learning

./: .gitignore  env_hrsmc_ml4chem.yml  machine-learning.code-workspace  pyproject.toml  test.ipynb
alpha-fold/: main.py  pyproject.toml  quick_start.ipynb
alpha-fold/tutorial_data/: AR_LIGANDS.tsv
bayesian/: README.md  environment_buq.yml  pyproject.toml
bayesian/buq/: __init__.py  bq_runner.py  integration.py
bayesian/buq/sample_systems/: __init__.py  mock.py
bayesian/tutorials/: 01_bo_adipep_phi.ipynb  02_buq_adipep_phi_psi.ipynb
chem-lang/: 01_cleaning.ipynb  02_data_splitting.ipynb  03_inspect_reference.ipynb  04_data_augmentation.ipynb  05_finetuning_enumeration.ipynb  pyproject.toml
chem-lang/dataset/augmented/: test_augmented.csv  train_augmented.csv  val_augmented.csv
chem-lang/dataset/raw/: smiles.csv  (+1 more)
chem-lang/scripts/: model.py
hyperparameter/: practical_1.ipynb  practical_2.ipynb  pyproject.toml
ml-intro/: HRSCM-Day2A_IntroMachineLearning.ipynb  HRSMC-Day4_GraphNeuralNetworks.ipynb  HRSMC_Day2B_IntroNeuralNetworks.ipynb  HRSMC_Day2B_Solutions.ipynb  README.md  model.dth  pyproject.toml
python-tutorial/: README.md  pyproject.toml
python-tutorial/LV_notebooks/: AI_poem.txt  Arrays_summary.ipynb  Conditionals_summary.ipynb  Demonstration_arrays.ipynb  Demonstration_functions.ipynb  Demonstration_plotting.ipynb  ExamResults.csv  Functions_summary.ipynb  Lists_summary.ipynb  Loops_summary.ipynb  Math_summary.ipynb  Notebook_1.ipynb  Notebook_2.ipynb  Notebook_3.ipynb  Notebook_5.ipynb  Strings_summary.ipynb  diatomic_df.csv  xy_dataset.npy
(+9 files in other folders)
