[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "python-tutorial",
    "ml-intro",
    "bayesian",
    "hyperparameter",
    "chem-language",
    "chem-lang",
    "alpha-fold",
]
